--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
+    "bootstrap": "^5.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "16.13.1",
+    "react-icons": "^4.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-eva-icons": "^1.3.1",
     "react-native-gesture-handler": "~1.10.2",
