--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "firebase": "^8.2.3",
     "react": "16.13.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "16.13.1",
