--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.0",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
@@ -24,6 +26,9 @@
     "react-native-elements": "^3.4.2",
     "react-native-eva-icons": "^1.3.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal": "^12.0.3",
+    "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-neat-date-picker": "^1.0.6",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
