--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "bootstrap": "^5.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
